--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "animate.css": "^4.1.1",
     "boxicons": "^2.1.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vercel": "^37.14.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
