--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "boxicons": "^2.1.4",
+    "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "vercel": "^37.14.0"
+    "react-router-dom": "^6.28.0",
+    "react-typing-effect": "^2.0.5",
+    "vercel": "^28.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
