--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-phone-number-input": "^3.4.9",
     "react-router-dom": "^6.28.0",
     "react-typing-effect": "^2.0.5",
     "vercel": "^28.18.5"
@@ -32,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
+    "prettier": "3.3.3",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10"
   }
