--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "boxicons": "^2.1.4",
+    "dotenv": "^16.4.5",
     "motion": "^11.11.17",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
